fix(table): compact expandable border and spacing

--- a/src/patternfly/components/Table/table.scss
+++ b/src/patternfly/components/Table/table.scss
@@ -108,6 +108,10 @@
   --pf-c-table--m-compact-cell--first-last-child--PaddingLeft: var(--pf-global--spacer--xl);
   --pf-c-table--m-compact-cell--first-last-child--PaddingRight: var(--pf-global--spacer--xl);
   --pf-c-table--m-compact--FontSize: var(--pf-global--FontSize--sm);
+  --pf-c-table--m-compact__expandable-row-content--PaddingTop: var(--pf-global--spacer--lg);
+  --pf-c-table--m-compact__expandable-row-content--PaddingRight: var(--pf-global--spacer--lg);
+  --pf-c-table--m-compact__expandable-row-content--PaddingBottom: var(--pf-global--spacer--lg);
+  --pf-c-table--m-compact__expandable-row-content--PaddingLeft: var(--pf-global--spacer--lg);
 
   // Modifier - Compound expansion toggle
   --pf-c-table__compound-expansion-toggle--BorderTop--BorderWidth: var(--pf-global--BorderWidth--lg);
@@ -449,6 +453,14 @@
       --pf-c-table--BorderWidth: 0;
       --pf-c-table--BorderColor: transparent;
 
+      /* stylelint-disable */
+      &:not(.pf-m-expanded),
+      &.pf-m-expanded > tr:not(:first-child) {
+        --pf-c-table--BorderWidth: 0;
+        --pf-c-table--BorderColor: transparent;
+      }
+      /* stylelint-enable */
+
       tr:first-child > * {
         --pf-c-table-cell--PaddingTop: calc(var(--pf-c-table--m-compact-cell--PaddingTop) * 2);
       }
@@ -499,6 +511,15 @@
 
     &:last-child {
       --pf-c-table-cell--PaddingRight: var(--pf-c-table--nested--first-last-child--PaddingRight);
+    }
+  }
+
+  .pf-c-table__expandable-row {
+    .pf-c-table__expandable-row-content {
+      --pf-c-table__expandable-row-content--PaddingTop: var(--pf-c-table--m-compact__expandable-row-content--PaddingTop);
+      --pf-c-table__expandable-row-content--PaddingRight: var(--pf-c-table--m-compact__expandable-row-content--PaddingRight);
+      --pf-c-table__expandable-row-content--PaddingBottom: var(--pf-c-table--m-compact__expandable-row-content--PaddingBottom);
+      --pf-c-table__expandable-row-content--PaddingLeft: var(--pf-c-table--m-compact__expandable-row-content--PaddingLeft);
     }
   }
 }
